Fleet UI: Fix user page responsiveness to not overflow horizontally

--- a/frontend/components/buttons/Button/_styles.scss
+++ b/frontend/components/buttons/Button/_styles.scss
@@ -92,6 +92,7 @@ $base-class: "button";
       $core-vibrant-blue-down
     );
     display: flex;
+    text-wrap: nowrap;
   }
 
   &--success {
