--- a/frontend/pages/admin/UserManagementPage/_styles.scss
+++ b/frontend/pages/admin/UserManagementPage/_styles.scss
@@ -45,27 +45,10 @@
     }
   }
 
-  @media (max-width: ($break-mobile-sm - 1)) {
-    .role__header,
-    .role__cell {
-      display: none;
-      width: 0;
-    }
-  }
-
-  @media (max-width: ($break-mobile-md -1)) {
-    .teams__header,
-    .teams__cell {
-      display: none;
-      width: 0;
-    }
-  }
-
-  @media (max-width: ($break-xs -1)) {
-    .status__header,
-    .status__cell {
-      display: none;
-      width: 0;
+  @media (min-width: ($break-lg)) {
+    .name__header,
+    .name__cell {
+      max-width: $col-md;
     }
   }
 
@@ -77,10 +60,56 @@
     }
   }
 
-  @media (min-width: ($break-lg)) {
-    .name__header,
-    .name__cell {
-      max-width: $col-md;
+  @media (max-width: ($break-xs - 1)) {
+    .status__header,
+    .status__cell {
+      display: none;
+      width: 0;
+    }
+  }
+
+  @media (max-width: ($break-mobile-md - 1)) {
+    .teams__header,
+    .teams__cell {
+      display: none;
+      width: 0;
+    }
+
+    // Splits header to 2 lines with user count on the first line
+    .table-container__header {
+      align-items: end;
+      &-left {
+        flex-direction: column;
+        width: initial;
+        align-items: start;
+      }
+
+      .table-container__search {
+        width: 100%;
+      }
+    }
+  }
+
+  @media (max-width: ($break-mobile-sm - 1)) {
+    .role__header,
+    .role__cell {
+      display: none;
+      width: 0;
+    }
+
+    .table-container__header {
+      flex-direction: column;
+      align-items: start;
+      width: 100%;
+
+      &-left {
+        width: 100%;
+
+        .controls,
+        .button {
+          width: 100%;
+        }
+      }
     }
   }
 }
